--- a/page.css
+++ b/page.css
@@ -12,7 +12,7 @@ body {
   background:#2f2841;
 }
 
-.cabecalho {
+.cabecalho{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -20,63 +20,15 @@ body {
   padding: 24px;
 }
 
-.cabecalho-imagem {
-  height: 72px;
-}
-
-.cabecalho-menu {
-  display: flex;
-  gap: 32px;
-}
-
-.cabecalho-menu-item {
-  font-family:sans-serif;
-  color: #FFF2E7;
-  font-weight: 400;
-  font-size: 15px
-}
-
-.conteudo {
-  margin-bottom: 48px;
-  border-top: 0.4px solid #FFF2E7;
-}
-
-.conteudo-principal {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.conteudo-principal-escrito {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-.conteudo-principal-escrito-titulo {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  font-family: sans-serif ;
-  font-weight: 400;
-  font-size: 35px;
-  color: #FFF2E7;
-}
-
-
-
 .imagem {
-  height: 400px ;
+  height: 250px;
   width: 100%;
-  padding: 15px 15px;
-  
-  
+  padding: 0px;
 }
 
 
  .monitorar {
-   padding: 2px 16px;
+  padding: 200px 16px;
   background: none;
   width: 600px;
   border-radius: 3px;
@@ -100,45 +52,96 @@ body {
   .rastreio {
 
   background:  #00ff88;
-  ;
   padding: 10px;
   border-radius: 7px;
   margin-top: 10px;
   margin-left: 10px;
   color: #fff;
   font-weight: 700;
-  border: 1px solid #5d0000;
-  color: white;
+  border: 1px solid #f3c5c5;
+  color: rgb(5, 0, 0);
   cursor: pointer;
 
   }
 
   .rastreio:hover {
   
-  background: #ff0000;
+  background: #6b103d;
 
 }
 
-  .rastreio:before {
-
-  content: "";
-  font-family: icomoon;
-  margin-right: 10px;
-  font-size: 12px;
-
-}
 
   input#OrderTracking {
 
   background: none;
-  width: 228px;
+  width: 100%;
   text-align: center;
   padding: 10px;
   padding-left: 0px;
   border-radius: 6px;
-  border: 1px solid #710000;
+  border: 1px solid #fffafa;
   color: #b9b9b9;
 
   }
+ /* navbar */
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
 
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
+li a:hover {
+    background-color: #2f2841;
+}
  
+
+.sessao-contato {
+  width: 100%;
+  height: 100vh;
+  background-color: #2f2841;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contato-wrapper {
+  width: 80%;
+  height: 25rem;
+  display: flex;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
+}
+
+
+.sessao-contato h1 {
+  width: 100%;
+  text-align: center;
+  font-family: var(--font-primary);
+  color: #2f2841;
+  font-size: 3rem;
+  font-weight: lighter;
+}
+
+.input-group {
+  border-left: 50px;
+  width: 100%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 1.0rem;
+  font-weight: lighter;
+}
